; ModuleID = '/home/carl/AnghaBench/kphp-kdb/dhcp/extr_dhcp-data.c_dhcp_query_act.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/dhcp/extr_dhcp-data.c_dhcp_query_act.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [28 x i8] c"Op code isn't BOOTREQUEST.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dhcp_query_act(%struct.TYPE_4__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 1
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = call i32 @vkprintf(i32 2, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %24

14:                                               ; preds = %3
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %23 [
    i32 128, label %18
  ]

18:                                               ; preds = %14
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @process_discover(%struct.TYPE_4__* %19, i8* %20, i32 %21)
  store i32 %22, i32* %4, align 4
  br label %24

23:                                               ; preds = %14
  store i32 -1, i32* %4, align 4
  br label %24

24:                                               ; preds = %23, %18, %12
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @vkprintf(i32, i8*) #1

declare dso_local i32 @process_discover(%struct.TYPE_4__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
